# fc2-systemdetection

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: gear_cpu.rs  gear_graphics.rs  gear_hardware.rs  gear_score.rs  lib.rs
src/gear/: graphics.rs  hardware.rs  mod.rs
src/patches/: hooks.rs  memory.rs  mod.rs  sigscan.rs
